Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98403

tst_QPainter fails with macOS 12 x86 in developer build tests

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.3, 6.3.0 Alpha
    • 6.3
    • GUI: Painting
    • None
    • macOS
    • 4f69a1e1d2ae8f475bbd7e1d3c1ca92487c6ea90 (qt/qtbase/dev) 9ed75c72bf08ab04c7e5a67dae3d026f2e178d18 (qt/qtbase/6.2) c07e85b15d298bdccbfef551448eba966f7bf306 (qt/qtbase/6.2.2)

    Description

      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1637144930

      https://testresults.qt.io/coin/api/results/qt/qtbase/e938a370b926e6a0ff40245e23e4d6ccfa78c42f/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-102-9e4302Sccache_TestOnly/d158c08bcf8a4b90066bf47d205851e95c104acf/test_1637144993/log.txt.gz

      agent:2021/11/17 11:11:32 build.go:394: 331: FAIL! : tst_QPainter::disableEnableClipping() Compared values are not the same
      agent:2021/11/17 11:11:32 build.go:394: 331: Actual (countPixels(img, 0xff0000)): 98
      agent:2021/11/17 11:11:32 build.go:394: 331: Expected (96) : 96
      agent:2021/11/17 11:11:32 build.go:394: 331: Loc: [/Users/qt/work/qt/qtbase/tests/auto/gui/painting/qpainter/tst_qpainter.cpp(1714)]

      Attachments

        1. baseline-diff-clang13.png
          292 kB
          Eirik Aavitsland

        Issue Links

          For Gerrit Dashboard: QTBUG-98403
          # Subject Branch Project Status CR V

          Activity

            People

              vgt Eirik Aavitsland
              hehalmet Heikki Halmet
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes