Clean up line clipping code in rasterizer

Replace old code with the line clipper from qcosmeticstroker.

Also avoids tripping some issue with the current clang 13 that would
cause paint errors on macOS.

Fixes: QTBUG-98403
Fixes: QTBUG-98388
Change-Id: I257eeec6f71153ec51b4176df3be8c443938484c
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 4f69a1e1d2ae8f475bbd7e1d3c1ca92487c6ea90)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>